fix(Chinese) Text-wrapping and markdown (#208)
* fix(Chinese wrapping) Force text to wrap, except in dropdown menus
* fix(Markdown) Fix parsing of inline bold Chinese text

--- a/src/assets/styles/includes/reset.css
+++ b/src/assets/styles/includes/reset.css
@@ -10,10 +10,6 @@ html {
 body {
   margin: 0;
 
-  /* prevent Chinese text from breaking
-     https://developer.mozilla.org/en-US/docs/Web/CSS/word-break */
-  word-break: keep-all;
-
   @media (--bp-sm-only) {
     padding: 0 var(--component-wrapper-margin-sm) var(--component-wrapper-margin-sm);
   }
